2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml, Makefile.am, templates/GtkSharpWindow.xft.xml:
	  Removed the Gtk.Window template, because the Stetic addin already
	  provides a template for creating windows.
	* Autotools/Autotools.mdp, CSharpBinding.mdp, CSharpBinding.mds: Updated.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OverrideCompletionData.cs: Flags for showing return types and
	  parameters must be explicitely specified now.

2007-10-18  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpParameterDataProvider.cs, Gui/CSharpTextEditorExtension.cs:
	  Fixed "Bug 325509 - Inaccessible methods displayed in autocomplete".

2007-10-17  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: changed is/as resolve.

2007-10-17  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed "Bug 334236 - Intellisense does not work for
	  `is' keyword".

2007-10-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Let TypeNameResolver fill the names using the compiled
	  unit. Helps fixing bug #325081.

2007-10-17  Mike Krüger <mkrueger@novell.com> 

	* Parser/CSharpVisitor.cs: Modified visitor to handle explicit declarations.

2007-10-16  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: fixed "Bug 325528 - Intellisense contains multiple
	  entries of same namespace".

2007-10-16  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp, Parser/TypeNameResolver.cs, Makefile.am: Moved
	  TypeNameResolver to MD.Projects.

2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 333140 - Xml comment
	  generation only works when using "Smart" indentation".

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* CSharpBindingCompilerManager.cs: Applied changes that were neccassary for
	  to the new FileService.

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: Always show parameter types.
