@@ -1,3 +1,8 @@
+2007-10-23  Mike Krüger <mkrueger@novell.com> 
+
+	* Parser/Resolver.cs: Fixed "Bug 335133 - Intellisense does not display
+	  object members for interfaces".
+
 2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* CSharpBinding.addin.xml, Makefile.am, templates/GtkSharpWindow.xft.xml:
